Issue 65 css overflow of long lines in trigger
  - adjust trigger styles to properly break long words

--- a/src/react-super-select.less
+++ b/src/react-super-select.less
@@ -124,6 +124,7 @@
   .border-radius(.25rem, .25rem, .25rem, .25rem);
   cursor: pointer;
   outline: none;
+  word-wrap: break-word;
 
   .r-ss-selected-label {
     padding: 0 .5rem;
